[package]
name = "rust-autojump"
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]
authors = ["Michał Kurleto"]
description = "Rust implementation of the autojump command"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.9"
rayon = "1.5.2"
home = "0.5.3"
